--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,11 @@ spring:
     driver-class-name: org.h2.Driver
     username: sa
     password: password
+#    driverClassName: org.postgresql.Driver
+##    url: jdbc:postgresql://localhost:5438/courses
+#    url: jdbc:postgresql://localhost:5432/courses
+#    username: postgres
+#    password: postgres
   jpa:
     database: h2
     database-platform: org.hibernate.dialect.H2Dialect
